:icons: font

= Gentics Mesh Changelog


[[0.10.4]]
== 0.10.4 (TBD)

icon:check[] REST: Fixed a bug in the permission system. Permissions on microschemas will now correctly be updated when applying permission recursively on projects. 

icon:check[] REST: ETags will now be updated if the permission on the element changes.

icon:plus[] Config: It is now possible to configure the host to which the Gentics Mesh http server should bind to. Default is still 0.0.0.0 (all interfaces).

icon:plus[] REST: The `/api/v1/admin/reindex` and `/api/v1/admin/createMappings` have been changed from `GET` to `POST`.

[[0.10.3]]
== 0.10.3 (18.09.2017)

icon:plus[] Logging: The `logback.xml` default logging configuration file will now be placed in the `config` folder. The file can be used to customize the logging configuration.

icon:plus[] Configuration: It is now possible to set custom properties within the elasticsearch setting.

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.27

icon:plus[] REST: It is now possible to set and read permissions using paths which contain the project name. Example:  `GET /api/v1/roles/:roleUuid/permissions/:projectName/...`

icon:check[] Search: A potential race condition has been fixed. This condition previously caused the elasticsearch to no longer accept any changes.

icon:check[] Performance: The REST API performance has been improved by optimizing the JSON generation process. link:https://github.com/gentics/mesh/issues/141[#141]

== 0.10.2 (14.09.2017)

icon:book[] Documentation: The new link:https://getmesh.io/docs/beta/security.html[security] and link:https://getmesh.io/docs/beta/performance.html[performance] sections have been added to our documentation.

icon:plus[] The *Webroot-Response-Type* header can now be used to differentiate between a webroot binary and node responses. The values of this header can either be *binary* or *node*.

icon:plus[] The `/api/v1/admin/status/migrations` endpoint was removed. 