@@ -39,7 +39,7 @@ public class NodeLanguagesEndpointTest extends AbstractMeshTest {
 
 		// Loading is still be possible but the node will contain no fields
 		NodeResponse response = call(() -> client().findNodeByUuid(PROJECT_NAME, contentUuid(), new NodeParametersImpl().setLanguages("en")));
-		assertThat(response.getAvailableLanguages()).contains("de");
+		assertThat(response.getAvailableLanguages().keySet()).contains("de");
 		assertThat(response.getFields()).isEmpty();
 
 		response = call(() -> client().findNodeByUuid(PROJECT_NAME, contentUuid(), new NodeParametersImpl().setLanguages("de")));
