@@ -26,6 +26,7 @@
 		level="TRACE"/> -->
 	<!-- <logger name="com.gentics" level="ERROR" additivity="false"> <appender-ref ref="STDERR"/> </logger> -->
 <!-- 
+
 	<logger name="com.gentics.mesh.rest.client.handler.impl.MeshJsonResponseHandler" level="DEBUG"/>
 	<logger name="com.gentics.mesh.rest.MeshRestRequestUtil" level="DEBUG"/>
 	<logger name="com.gentics.mesh.etc.RouterStorage" level="DEBUG"/>
@@ -33,8 +34,10 @@
 	<logger name="com.gentics.mesh.search.impl.ElasticSearchProvider" level="DEBUG"/>
 	<logger name="com.gentics.mesh.core.verticle.node.NodeMigrationVerticle" level="ERROR" />
 	<logger name="com.gentics.mesh.core.data.node.handler.NodeMigrationHandler" level="ERROR" />
+	<logger name="com.gentics" level="DEBUG" />
 	 -->
 	<!-- <logger name="com.gentics.mesh.core.data.search.impl.SearchQueueBatchImpl" level="DEBUG" /> -->
+	
 	<root level="ERROR">
 		<appender-ref ref="STDOUT"/>
 	</root>
