@@ -6,6 +6,8 @@
 [[0.10.4]]
 == 0.10.4 (TBD)
 
+icon:bullhorn[] REST: The `availableLanguages` field now also contains the publish information of the languages of a node.
+
 icon:check[] REST: Fixed a bug in the permission system. Permissions on microschemas will now correctly be updated when applying permission recursively on projects. 
 
 icon:check[] REST: ETags will now be updated if the permission on the element changes.
